[package]
name = "trampoline-cli"
version = "0.9.2"
default-run = "trampoline"
authors = ["Srikanth <srikanth@psync.dev>"]
categories = ["email"]
description = "Check if an email address exists without sending any email"
documentation = "http://docs.rs/check-if-email-exists"
edition = "2021"
keywords = ["email", "smtp", "mx", "verification", "deliverability", "proxy", "socks5"]
license = "AGPL-3.0"
publish = true
readme = "../README.md"
repository = "https://github.com/xchikux/trampoline"


[[bin]]
name = "trampoline"
path = "src/main.rs"

[dependencies]
trampoline = { path = "../core", features = ["headless"] }
clap = { version = "3.2", features = ["derive", "env"] }
env_logger = "0.10"
once_cell = "1.17"
openssl = { version = "0.10.57", features = ["vendored"] }
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.95"


[dependencies.tokio]
version = "1.32.0"
features = ["macros", "net", "io-util", "rt-multi-thread"]

[profile.release]
lto = true
