[package]
name = "trampoline-shuttle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trampoline"
path = "src/main.rs"

[dependencies]
trampoline = { path = "../core", features = ["headless"] }
clap = { version = "3.2", features = ["derive", "env"] }
env_logger = "0.10"
once_cell = "1.17"
openssl = { version = "0.10.57", features = ["vendored"] }
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.95"
anyhow = "1.0.40"
shuttle-tide = "0.27.0"
shuttle-runtime = "0.27.0"
tide = "0.16.0"

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "net", "io-util", "rt-multi-thread"]
